Fixes grid height issue and alignment

--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
-.calculator {
-  margin: 0 auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+html, body {
+  height: 95%;
+  padding: 0;
+  margin: 0
 }
 
 .display {
